cloudengineer-project/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: missael
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      serviceAccountName: missael-service-account
      containers:
        - name: proxy
          image: 734647218919.dkr.ecr.us-east-1.amazonaws.com/missael-hire-project-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
