cloudengineer-project/k8s/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: missael
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: 734647218919.dkr.ecr.us-east-1.amazonaws.com/missael-hire-project-proxy
          ports:
            - containerPort: 8080
