cloudengineer-project/k8s/proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: missael
spec:
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
